--- a/views/button.ejs
+++ b/views/button.ejs
@@ -10,13 +10,13 @@
     <script>
          $('#btn1').click((event) => {
              event.preventDefault();
-             $.get('/users/switch' , {action : 1} , (data) => {
+             $.get('/switch' , {action : 1} , (data) => {
                  $('#msg').html("LED IS ONN.....")
              })
          })
          $('#btn2').click(() => {
             event.preventDefault();
-             $.get('/users/switch' , {action : 0} , (data) => {
+             $.get('/switch' , {action : 0} , (data) => {
                  $('#msg').html("LED IS OFF.....")
              })
          })
